For v2.6.4

New:
- Added context state to property editors, which allows a property editor to fetch the parent object. This allows attribute editors to make behavior changes based on the instance that hosts the variable they are editing. See [InspectorDisabledIf] for an example implementation.
- Added [InspectorDisabledIf], similar to [InspectorShowIf] and [InspectorHideIf].
- [InspectorShowIf] and [InspectorHideIf] now support multiple fields/properties.
- Decreased initialization time with some reflection optimizations.
- Added Lines helper to [InspectorTextArea].
- Experimental multi-object editing. There are major known issues.
- Added fiSettings.EnableGlobalOrdering to make [InspectorOrder] global.
- [InspectorTooltip] can now be added to a class. The tooltip will be shown on the "Name" property that every inspector starts with.
- Added BaseBehavior.SharedStatePrefabInstantiation, which allows a behavior to skip serialization cloning when being cloned as part of an UnityObject.Instantiate call. This can significantly speedup object duplication, but state is now shared between the instances.

Changes:
- Don't auto-serialize prefabs while playing.
- Better logic to destroy old fiBackupSceneStorage instances that have been corrupted.
- The serializer manager will no longer automatically show itself.
- fiInspectorOnly for ScriptableObjects is now a fallback editor.
- Fixed issue where adding more than 20 items to a dictionary caused an exception.

Fixes:
- Fixed property drawer integration reallocating drawer instance.
- Fixed metadata not properly getting updated for collection property editors.
- Fixed Full Serializer exception being thrown for Window Store non-il2cpp builds.
- Fixed existing prefab instance members being overriden when changing a MonoBehaviour type to a BaseBehavior type.
- Fixed occasional null deref from OnSceneGUI.


For v2.6.3

New: