@@ -1,0 +1,12 @@
+fileFormatVersion: 2
+guid: 5cdd7d0c5c85c44d3a86dafcd2c9e858
+timeCreated: 1480875164
+licenseType: Free
+MonoImporter:
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
